added some mods

--- a/langs/LIVE.json
+++ b/langs/LIVE.json
@@ -7,8 +7,10 @@
   "NX/COLOUR/R/PRE": "R",
   "NX/COLOUR/S/PRE": "S",
   "NX/COLOUR/V/PRE": "V",
+  "CHEAT_SAFETY/RULESET/0": "Mega Hack",
+  "CHEAT_SAFETY/RULESET/1": "Demon List",
+  "CHEAT_SAFETY/RULESET/2": "Leaderboards",
   "HOME": "Mega Hack",
-  "HOME/RULESETS/DEMONLIST": "DemonList",
   "HOME/THEME/0/TOGGLE": "Nona",
   "HOME/THEME/1/TOGGLE": "Nona Lux",
   "HOME/THEME/2/TOGGLE": "Octavus",
