--- a/langs/ar-SA.json
+++ b/langs/ar-SA.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "إخفاء زر الإيقاف المؤقت",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "يخفي زر الإيقاف المؤقت عندما يكون مؤشر اللعبة قيد التشغيل",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "إخفاء قائمة الإيقاف المؤقت",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "لا يوجد تأثيرات بصرية على الموت",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "لا يوجد منع التقليب",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "يوقف محاولة التقليب ونص اكتمال المستوى",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "الوضع الآمن التلقائي",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "يمكّن الوضع الآمن فقط عند تمكين الغش",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "الوضع الآمن",
