--- a/langs/de-CH.json
+++ b/langs/de-CH.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Pausier Chnopf Verstecke",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Versteckt de Pausier Chnopf wenn diin ingame Muuszeiger aktiviert esch",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Pause Menu Verstecke",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Kei sichtbare Effekt wenn stirbsch",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Kei due ned Dräie",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Stoppt dräi versüech & level gschafft text",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Automatische Sicherheits Modus",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Macht Sicherheitsmodus aa wenn Cheats aktiviert send",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Sicherheitsmodus",
