--- a/langs/el-GR.json
+++ b/langs/el-GR.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Επιτρέπει για παλμούς παραπάνω απο 60hz, παρόμιο με το πως ήταν πριν το 2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Κλασικό Wave Trail",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Επαναεφαρμόζει το Wave Trail όπως ήταν στο 2.1",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Απόκρυψη κουμπιού παύσης",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Αποκρύπτει το κουμπί παύσης όταν είναι φένεται ο κέρσορας ενω παίζεις ένα επίπεδο",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Απόκρυψη Μενού Παύσης",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Χωρίς οπτικά εφέ στον θάνατο",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Όχι 'Do Not' Flip",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Διακόπτει την προσπάθεια αναστροφής και επίπεδο πλήρους κειμένου",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Οχι Glow",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Αυτόματη ασφαλή λειτουργία",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Ενεργοποιεί την Ασφαλή λειτουργία μόνο όταν είναι ενεργοποιημένες οι κλεψιές",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Ασφαλής λειτουργία",
