--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Allows pulsing above 60hz, similar to pre-2.1 pulsing",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Classic Wave Trail",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Reimplementation of the 2.1 wave trail",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "Frozen Animations",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "Disables sprite animations like the Robot and Spider",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Hide Pause Button",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Hides the pause button when the in-game cursor is enabled",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Hide Pause Menu",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "No visual effects on death",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "No Do Not Flip",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Stops flipping attempt & level complete text",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "No Ghost Trail",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "Disables the ghost trail effect on players",
   "COSMETIC/HACK_NO_GLOW": "No Glow",
   "COSMETIC/HACK_NO_GLOW/TIP": "Disables the glow effect on all objects",
   "COSMETIC/HACK_NO_MIRROR": "No Mirror",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Duration",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
   "CHEAT_SAFETY": "Cheat Safety",
+  "CHEAT_SAFETY/RULESET": "Ruleset",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "Disable Cheats",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Auto Safe Mode",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Triggers Safe Mode if cheats have been used in an attempt",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Safe Mode",
