--- a/langs/es-AR.json
+++ b/langs/es-AR.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "No mostrar el botón de pausa",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Saca el botón de pausa si la opción Show In-game Cursor está activada",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "No mostrar el menú de pausa",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Desactiva el efecto visual al morir",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "No girar el texto con Do Not",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Hace que el texto (intentos y Level Complete) no gire cuando se activa la opción Do Not",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Modo Seguro Automático",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Activa el modo seguro sólo cuando los hacks están activados",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Modo Seguro",
