--- a/langs/es-CO.json
+++ b/langs/es-CO.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Estela del Wave Clásica",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Reimplementación de la estela del Wave de la 2.1",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Esconder Botón de Pausa",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Esconde el botón de pausar cuando el cursor del juego está activo",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Esconder Menú de Pausa",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "No hay efectos visuales al morir",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "No Voltear",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Detiene el intento de voltear y el texto de nivel completado",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Sin Brillo",
   "COSMETIC/HACK_NO_GLOW/TIP": "Desactiva el efecto de brillo en todos los objetos",
   "COSMETIC/HACK_NO_MIRROR": "Sin Espejo",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Duración",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Modo Seguro Automático",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Activa el Modo Seguro si se usaron trucos en un intento",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Modo Seguro",
