--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Permite pulsaciones por encima de los 60Hz, tal y como en la 2.1 y antes",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Estela clásica del wave",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Reimplantación de la estela del wave de la 2.1",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Ocultar botón de pausa",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Oculta el botón de pausa cuando el cursor del juego está activado",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Ocultar menú de pausa",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Desactivar efectos visuales de muerte",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Revertir 'Do Not'",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Revierte los textos invertidos de 'Attempt X' y 'Level Complete'",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Desactivar glow",
   "COSMETIC/HACK_NO_GLOW/TIP": "Desactiva el efecto de brillo de todos los objetos",
   "COSMETIC/HACK_NO_MIRROR": "Desactivar espejo",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Duración",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Modo seguro automático",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Activa el modo seguro cuando algún hack esté activado",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Modo seguro",
