--- a/langs/es-MX.json
+++ b/langs/es-MX.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Ocultar Botón de Pausa",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Oculta el botón de pausa al jugar niveles.",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Ocultar Menú de Pausa",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Sin efectos visuales de muerte.",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Desinvertir 'Do Not'",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "La opción 'Do Not..' no afecta a los textos de 'Attempt X' y 'Level Complete'.",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Modo Seguro Automático",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Activa el modo seguro sólo cuando los trucos están activados.",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Modo Seguro",
