--- a/langs/et-EE.json
+++ b/langs/et-EE.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Peida Nupp Paus",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Peidab pausi nupu, kui hiir on sisse lülitatud",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Peida Menüü Paus",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Visuaalseid surmaefekte pole",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Do Not Tõlget Pole",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Peatab ettevõtte ja taseme tervikteksti tõlkimise",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Automaatne Turvarežiimi",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Lubab turvarežiimi ainult siis, kui pettused on lubatud",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Turvarežiimi",
