--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "60Hz gaineko taupadak ahalbidetzen ditu, 2.1 eta aurretiko eran bezala",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Wave-Aztarna Klasikoa",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "2.1 bertsioaren wave-aztarnaren birsorketa",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Pausa-Botoia Ezkutatu",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Jokuaren barruan kurtsorea aktibatuta badago, pausa-botoia ezkutatzen du",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Pausa-Menua Ezkutatu",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Hiltzean, efektu bisualak desgaitzen ditu",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "'Do Not Flip'-ik Ez",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Saiakera eta Maila Gaindituta testuak buruz-behera jartzea desgaitzen ditu",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Glow-rik Ez",
   "COSMETIC/HACK_NO_GLOW/TIP": "Objektu guztietan, glow efektua desgaitzen du",
   "COSMETIC/HACK_NO_MIRROR": "Ispilurik Ez",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Iraupena",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Auto-Modu Segurua",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Saiakera batean tranpak erabili badira, modu Segurua pizten du",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Modu Segurua",
