--- a/langs/fi-FI.json
+++ b/langs/fi-FI.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Piilota Pause-nappula",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Piilottaa pause-nappulan kun hiiri on päällä",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Piilota Pause-valikko",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Ei visuaalisia kuoleman efektejä",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Ei Do Not Käännöstä",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Lopettaa attempt- ja level complete tekstin kääntymisen",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Automaattinen Turvallinen Tila",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Ottaa turvallisen tilan käyttöön vain, kun huijaukset ovat käytössä",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Turvallinen Tila",
