--- a/langs/fr-FR.json
+++ b/langs/fr-FR.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Permet des pulsations au delà de 60Hz, comme les  versions antérieures à la 2.1.",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Traînée Wave classique",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Réimplémentation de la traînée de la Wave de la v2.1",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Masquer le bouton Pause",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Masque le bouton Pause lorsque l'option \"Show Cursor In-Game\" est activée",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Masquer le Menu Pause",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Désactive les effets visuels lors d'une mort",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Pas de \"Do Not...\"",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Désactive la fonction \"Do Not...\" même si activée en jeu (Certains textes retournés)",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Pas de lueur",
   "COSMETIC/HACK_NO_GLOW/TIP": "Désactive la lueur sur tous les objets",
   "COSMETIC/HACK_NO_MIRROR": "Pas de miroir",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Durée ",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Mode Safe Auto",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Active automatiquement le Mode Safe uniquement lorsque les cheats sont activés",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Mode Safe",
