--- a/langs/ga-IE.json
+++ b/langs/ga-IE.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Folaigh Cnaipe Stad",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Folaigh an cnaipe sos nuair atá an cúrsóir in-chluiche cumasaithe",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Folaigh Roghchlár Sos",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Gan aon éifeachtaí amhairc ar bhás",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Níl Ná Smeach",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Stopann sé iarracht a smeach agus leibhéal an téacs iomlán",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Mód Auto Sábháilte",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Ní féidir Mód Sábháilte a chumasú ach amháin nuair a bhíonn aicearra cumasaithe",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Mód Sábháilte",
