--- a/langs/hu-HU.json
+++ b/langs/hu-HU.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Pulzálás működését engedélyezi 60 HZ felett, úgy, mint ahogy 2.1 előtt volt.",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Klasszikus wave vonal",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Visszahozza a wave vonalát úgy, mint ahogy 2.1-ben volt.",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Megállító Gomb Elrejtése",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Elrejti a megállító gombot, amikor a játekon belüli kurzor meg van jelenítve",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Megállított Menü Elrejtése",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Nincs vizuális effekt a halálkor",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Ne legyen szöveg megfordítás",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Kikapcsolja a próbád számainak és a pálya kivitelének a szövegének a megfordítását",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Nincs glow",
   "COSMETIC/HACK_NO_GLOW/TIP": "Leszedi a glowot az ikonodról",
   "COSMETIC/HACK_NO_MIRROR": "Nincs irány fordító portal",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Duráció",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "ms",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Auto Biztonságos Mód",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Bekapcsolja a Biztonságos Módot, de csak akkor, ha be vannak kapcsolva csalások",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Bitonságos Mód",
