--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Permette la pulsazione sopra i 60hz, come nella 2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Wave Trail Classico",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Re-implementazione del wave trail della 2.1",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Nascondi Pulsante Pausa",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Nasconde il pulsante di pausa quando il cursore è attivo",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Nascondi Menu Pausa",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Nessun effetto visivo alla morte",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "No 'Do Not' Flip",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Evita di capovolgere gli attempt e la schermata di completamento",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "No Glow",
   "COSMETIC/HACK_NO_GLOW/TIP": "Rimuove l'effetto glow di tutti gli oggetti",
   "COSMETIC/HACK_NO_MIRROR": "No Specchio",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Modalità Sicura Automatica",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Abilita la Modalità Sicura solo quando i cheat sono attivi",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Modalità Sicura",
