--- a/langs/ja-JP.json
+++ b/langs/ja-JP.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "ポーズボタンを非表示",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "ゲーム内カーソルが有効な場合、ポーズボタンを非表示にします",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "ポーズメニューを非表示",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "死亡時の視覚効果を無効化します",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "フリップ禁止無効化",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "フリップ禁止およびレベル完了テキストを停止します",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "自動セーフモード",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "チートが有効な場合のみセーフモードを有効にします",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "セーフモード",
