--- a/langs/lt-LT.json
+++ b/langs/lt-LT.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Slėpti Pauzės Mygtuką",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Paslepia pauzės mygtuką kai žymeklis žaidimo metu yra įjungtas",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Slėpti Pagrindinį Meniu",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Išjungia mirties efektus žaidėjui mirštant",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Išjungti Neapvertimą",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Išjungia bandymų ir lygio pabaigimo tekstų apvertimus",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Automatinis Saugus Režimas",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Įjungia saugų režimą esant įjungtai pagalbinei įrangai",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Saugus Režimas",
