--- a/langs/nb-NO.json
+++ b/langs/nb-NO.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Gjem Pauseknappen",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Gjemmer pauseknappen når markøren er slått på i spillet",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Gjem Pausemenyen",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Ingen visuelle effekter under dødsanimasjonen",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Ingen Ikke-velt",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Stopper å velte forsøks- og nivået-ferdig tekst",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Automatisk Trygghets-modus",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Aktiverer trygghets-modus bare når juks er slått på",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Trygg Modus",
