--- a/langs/nl-NL.json
+++ b/langs/nl-NL.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Pauzeknop Verbergen",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Verbergt de pauzeknop wanneer de in-game cursor is ingeschakeld",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Pauzemenu Verbergen",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Geen visuele effecten op de dood",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Geen 'Do Not'-flip",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Stopt met het omdraaien van de poging en niveau complete teksten",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Automatische Veilige Modus",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Schakelt de veilige modus alleen in als cheats zijn ingeschakeld",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Veilige Modus",
