--- a/langs/pl-PL.json
+++ b/langs/pl-PL.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Pozwala na pulsowanie powyżej 60 Hz, podobnie jak przed wersją 2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Klasyczny Trail Wave",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Reimplementacja wave trailu z wersji 2.1",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Ukryj Przycisk Pauzy",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Ukrywa przycisk pauzy, gdy kursor w grze jest włączony",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Ukryj Menu Pauzy",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Wyłącza efekt śmierci",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Wyłącz 'Do Not Flip'",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Zatrzymuje odwracanie tekstu próby i ukończenia poziomu",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Wyłącz Poświatę",
   "COSMETIC/HACK_NO_GLOW/TIP": "Wyłącza efekt poświaty na wszystkich obiektach",
   "COSMETIC/HACK_NO_MIRROR": "Wyłącz Mirror",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Czas",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Auto Tryb Bezpieczny",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Włącza tryb bezpieczny tylko wtedy, gdy włączone są cheaty",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Tryb Bezpieczny",
