--- a/langs/pt-BR.json
+++ b/langs/pt-BR.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Permite o pulsamento acima de 60hz, similar ao pulsamento pré-2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Trilha de Wave Clássica",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Reimplementação da trilha de wave da 2.1",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Esconder Botão de Pausa",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Esconde o botão de pausa quando o cursor do jogo está ativado",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Esconder Menu de Pausa",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Sem efeitos visuais de morte",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Sem 'Do Not' Invertido",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Impede que o texto de tentativa e o texto de fase completa esteja invertido",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Sem glow",
   "COSMETIC/HACK_NO_GLOW/TIP": "Desativa o efeito de glow em todos os objetos",
   "COSMETIC/HACK_NO_MIRROR": "Sem portal de espelho",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Modo Seguro Automático",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Habilita o Modo Seguro apenas quando os cheats estão ativadas",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Modo Seguro",
