--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Возвращает пульсации выше 60 Гц, как в pre-2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Классический след волны",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Реализует след волны из 2.1",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Скрыть кнопку паузы",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Скрывает кнопку паузы когда включен показ курсора в игре",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Скрыть меню паузы",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Отключает визуальные эффекты смерти",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Без Do Not",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Отключает переворот попыток и надписи прохождения",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Без свечения",
   "COSMETIC/HACK_NO_GLOW/TIP": "Отключает эффект свечения вокруг всех объектов",
   "COSMETIC/HACK_NO_MIRROR": "Без отражения",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Длительность",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "с",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Автоматический безопасный режим",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Автоматически включает безопасный режим в случае, если включены читы",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Безопасный режим",
