--- a/langs/sv-SE.json
+++ b/langs/sv-SE.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Dölj pausknapp",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Döljer pausknappen när muspekaren visas i spelet",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Dölj pausmenyn",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Inga visuella effekter när spelaren dör",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Ingen 'Do Not' vändning",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Slutar vända texten som visar antal försök och vid avklarad nivå",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Automatiskt säkert läge",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Aktiverar säkert läge endast när fusk är aktiverat",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Säkert läge",
