--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "60hz'in üstünde nabız efektine izin verir, 2.1'den önceki gibi",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Eski Wave İzi",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "2.1'deki olan wave izini geri getirir",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Duraklatma Düğmesini Gizle",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Oyun içi imleç etkinleştirildiğinde kenardaki oluşan duraklatma butonunu gizler",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Duraklatma Menüsünü Gizle",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Ölünce oluşan efektleri kaldırır",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Do Not Flip Yok",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Deneme sayısını ve seviye tamamlanma yazılarının döndürülmesini engeller",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Parlama Yok",
   "COSMETIC/HACK_NO_GLOW/TIP": "Bütün objelerdeki parlamayı kaldırır",
   "COSMETIC/HACK_NO_MIRROR": "Ayna Yok",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Süre",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Otomatik Güvenli Mod",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Güvenli Modu yalnızca hileler etkinleştirildiğinde etkinleştirir",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Güvenli Mod",
