--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Дозволяє пульсацію понад 60 Гц (що робить її схожою на пульсацію до версії 2.1)",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Класичний трейл вейву",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Реалізація трейлу вейву з версії 2.1",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Сховати кнопку паузи",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Ховає кнопку паузи, коли курсор видно під час гри",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Сховати меню паузи",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Деактивує всі ефекти смерті гравця",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Деакт. «Do Not...»",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Деактивує функцію «Do Not...», тобто деактивує переворот лічильника спроб і напису успішного проходження рівня",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Деакт. світіння",
   "COSMETIC/HACK_NO_GLOW/TIP": "Деактивує світіння у всіх об'єктів",
   "COSMETIC/HACK_NO_MIRROR": "Деакт. віддзеркалення",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Тривалість",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "с",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Автом. безпечний режим",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Автоматично вмикає безпечний режим, але тільки коли ввімкнені чити",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Безпечний режим",
