--- a/langs/vi-VN.json
+++ b/langs/vi-VN.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Ẩn nút tạm dừng",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Ẩn nút tạm dừng khi hiển thị con trỏ trong game được bật",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Ẩn menu tạm dừng",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Không có hiệu ứng khi player chết",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Tắt \"do not\" flip",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Tắt việc lật ngược chữ attempt & level complete",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Safe Mode tự động",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Tự kích hoạt Safe Mode khi các cheat được bật",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Chế độ an toàn",
