--- a/langs/zh-CN.json
+++ b/langs/zh-CN.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "允许在60hz以上pulse，类似于 2.1 之前",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "经典Wave尾迹",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "2.1的Wave尾迹",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "隐藏暂停键",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "游戏内显示鼠标时隐藏暂停键",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "隐藏暂停菜单",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "去除死亡时的视觉效果",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "无Do Not Flip",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "不反转attempt数和level complete",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "无Glow",
   "COSMETIC/HACK_NO_GLOW/TIP": "去除物体Glow效果",
   "COSMETIC/HACK_NO_MIRROR": "无Mirror",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "时间",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "秒",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "自动安全模式",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "做一个不作弊的legit玩家",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "安全模式",
