--- a/langs/zh-HK.json
+++ b/langs/zh-HK.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "原始箭號尾跡",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "從新做出2.1的箭號尾跡",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "隱藏暫停鍵",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "遊戲內顯示鼠標時隱藏暫停鍵",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "隱藏暫停選項單",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "禁用死亡時的視覺特效",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "無\"Do Not...\"文字翻轉",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "禁用反轉嘗試次數和\"Level Complete\"文字",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "無物體光亮",
   "COSMETIC/HACK_NO_GLOW/TIP": "去除物體光亮",
   "COSMETIC/HACK_NO_MIRROR": "無轉鏡子特效",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "持續",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "自動安全模式",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "如果有開戶任何作弊, 自動開戶安全模式",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "安全模式",
