--- a/langs/ca-ES.json
+++ b/langs/ca-ES.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "Permet pulsacions per sobre de 60hz, similar a les pulsacions pre-2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Deixant de Wave Clàssic",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Reimplementació del deixant del Wave de la 2.1",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Amagar Botó de Pausa",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Amaga el botó de pausa quan el cursor del joc està activat",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Amagar Menú de Pausa",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Sense efectes visuals en morir",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Sense No Gireu",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Atura el text d'intent de gir i nivell completat",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "Sense Resplendor",
   "COSMETIC/HACK_NO_GLOW/TIP": "Desactiva l'efecte de resplendor en tots els objectes",
   "COSMETIC/HACK_NO_MIRROR": "Sense Mirall",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Durada",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Mode Segur Automàtic",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Activa el Mode Segur si s'han utilitzat trucs en un intent",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Mode Segur",
