--- a/langs/de-DE.json
+++ b/langs/de-DE.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Pause-Button verbergen",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Verbirgt den Pauseknopf, wenn der Mauszeiger im Spiel aktiviert ist",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Pausenmenü verbergen",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Deaktiviert Effekte beim Tod",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Kein \"Do Not\"-Flip",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Der Attempt- und \"Level Complete\"-Text werden nicht mehr invertiert, wenn die \"Do Not...\"-Option aktiviert ist",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Auto Sicherer Modus",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Aktiviert den sicheren Modus automatisch, wenn Cheats aktiviert sind",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Sicherer Modus",
