--- a/langs/kk-KZ.json
+++ b/langs/kk-KZ.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Кідірту Түймесін Жасыру",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Ойын ішіндегі курсор іске қосылған кезде кідірту түймесін жасырады",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Кідірту Мәзірін Жасыру",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Өлімге визуалды әсер етпейді",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "'Do Not' Аударысты Өшіру",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Сынақ және деңгейді аяқтау мәтіндерін айналдыруды тоқтатады",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Авто Қауіпсіз режим",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Тек читтер қосылған кезде қауіпсіз режимді қосады",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Қауіпсіз режим",
