--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -100,6 +100,8 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "2.1 초기 버전의 펄스와 유사하게 60Hz 이상의 펄스을 허용합니다.",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "클래식 웨이브 트레일",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "2.1 버전의 웨이브 트레일을 재구현합니다.",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "일시 정지 버튼 숨기기",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "게임 내 커서가 활성화되면 일시 정지 버튼을 숨깁니다.",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "일시 정지 메뉴 숨기기",
@@ -114,6 +116,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "사망 시 시각 이펙트를 없앱니다.",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "뒤집기 비활성화",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "시도 횟수와 레벨 클리어 텍스트를 뒤집지 않습니다.",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
   "COSMETIC/HACK_NO_GLOW": "글로우 비활성화",
   "COSMETIC/HACK_NO_GLOW/TIP": "모든 오브젝트의 글로우 이펙트를 비활성화합니다.",
   "COSMETIC/HACK_NO_MIRROR": "좌우 반전 비활성화",
@@ -478,6 +482,8 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "지속 시간",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "초",
   "CHEAT_SAFETY": "",
+  "CHEAT_SAFETY/RULESET": "",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "자동 안전 모드",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "치트가 활성화된 경우에만 안전 모드를 활성화합니다.",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "안전 모드",
